--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -121,11 +121,18 @@
   <data name="Icon_pc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon_pc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LoginAPIURL" xml:space="preserve">
+    <value>/ws/accounts/login_api</value>
+  </data>
   <data name="no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\no_image.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="password3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\password3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="repo" xml:space="preserve">
+    <value>/epass2018</value>
+    <comment>repository of the server</comment>
   </data>
   <data name="stn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
