--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -145,4 +145,12 @@
   <data name="username5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\username5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RequestVehicleTypeAPIURL" xml:space="preserve">
+    <value>/ws/vehicle_types/get_all_vehicle_name</value>
+    <comment>API for request data vehicle type</comment>
+  </data>
+  <data name="SaveDataParkingAPIURL" xml:space="preserve">
+    <value>/ws/vehicle_types/get_all_vehicle_name</value>
+    <comment>API for saving data to server</comment>
+  </data>
 </root>
