--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -173,4 +173,10 @@
   <data name="version" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SettlementPathFromWindows" xml:space="preserve">
+    <value>\Public</value>
+  </data>
+  <data name="SettlmentPathInUbuntu" xml:space="preserve">
+    <value>/home/adminstn/settlement/</value>
+  </data>
 </root>
