--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SaveDataParkingAPIURL" xml:space="preserve">
-    <value>/ws/parking_outs/save_parking_out</value>
-    <comment>API for saving data to server</comment>
+  <data name="VersionApp" xml:space="preserve">
+    <value>1.0.1</value>
+    <comment>version of E-Payment Software</comment>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="database" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="id" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\id.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ipaddress" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ipaddress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -132,9 +135,8 @@
     <value>/ws/accounts/login_api</value>
     <comment>API for Sign In</comment>
   </data>
-  <data name="VersionApp" xml:space="preserve">
-    <value>1.0.1</value>
-    <comment>version of E-Payment Software</comment>
+  <data name="SettlementPathFromWindows" xml:space="preserve">
+    <value>\Public</value>
   </data>
   <data name="Icon_pc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon_pc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -147,6 +149,13 @@
     <value>/epass2018</value>
     <comment>repository of the server</comment>
   </data>
+  <data name="tid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tid.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SaveDataParkingAPIURL" xml:space="preserve">
+    <value>/ws/parking_outs/save_parking_out</value>
+    <comment>API for saving data to server</comment>
+  </data>
   <data name="no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\no_image.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,6 +166,9 @@
     <value>/ws/parking_outs/request_uid_fare</value>
     <comment>API for Request Data Parking In by UID card</comment>
   </data>
+  <data name="version" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DeveloperURL" xml:space="preserve">
     <value>www.linkedin.com/in/lukas-fam-037645175</value>
     <comment>how to get in touch with the developer of E-Payment Software</comment>
@@ -164,19 +176,16 @@
   <data name="stn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SettlmentPathInUbuntu" xml:space="preserve">
+    <value>/home/adminstn/settlement/</value>
+  </data>
   <data name="username5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\username5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="password3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\password3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="version" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SettlementPathFromWindows" xml:space="preserve">
-    <value>\Public</value>
-  </data>
-  <data name="SettlmentPathInUbuntu" xml:space="preserve">
-    <value>/home/adminstn/settlement/</value>
+  <data name="mid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
