--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -149,9 +149,6 @@
     <value>/epass2018</value>
     <comment>repository of the server</comment>
   </data>
-  <data name="tid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tid.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="SaveDataParkingAPIURL" xml:space="preserve">
     <value>/ws/parking_outs/save_parking_out</value>
     <comment>API for saving data to server</comment>
@@ -161,6 +158,9 @@
   </data>
   <data name="host" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\host.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RequestUIDFareAPIURL" xml:space="preserve">
     <value>/ws/parking_outs/request_uid_fare</value>
@@ -173,11 +173,14 @@
     <value>www.linkedin.com/in/lukas-fam-037645175</value>
     <comment>how to get in touch with the developer of E-Payment Software</comment>
   </data>
-  <data name="stn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\stn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tid.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SettlmentPathInUbuntu" xml:space="preserve">
     <value>/home/adminstn/settlement/</value>
+  </data>
+  <data name="stn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="username5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\username5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -185,7 +188,7 @@
   <data name="password3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\password3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="mid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\mid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="webcam" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\webcam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
