--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -170,7 +170,7 @@
     <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DeveloperURL" xml:space="preserve">
-    <value>www.linkedin.com/in/lukas-fam-037645175</value>
+    <value>https://takeruadelbert.github.io/</value>
     <comment>how to get in touch with the developer of E-Payment Software</comment>
   </data>
   <data name="tid" type="System.Resources.ResXFileRef, System.Windows.Forms">
