added search textbox on barcode field.

--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -323,4 +323,8 @@
   <data name="Poppins_ThinItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\fonts\Poppins-ThinItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="SearchBarcodeAPIURL" xml:space="preserve">
+    <value>/ws/parking_ins/search_barcode</value>
+    <comment>API for searching data barcode in cashier</comment>
+  </data>
 </root>
