--- a/BNITapCash/Classes/Forms/Cashier.resx
+++ b/BNITapCash/Classes/Forms/Cashier.resx
@@ -1135,6 +1135,13 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="LiveCamera.VlcLibDirectory" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAEAQAAABdTeXN0ZW0uSU8uRGlyZWN0b3J5SW5mbwIAAAAMT3JpZ2luYWxQ
+        YXRoCEZ1bGxQYXRoAQEGAgAAADtFOlxLYW50b3JcQyNcQk5JVGFwQ2FzaFxCTklUYXBDYXNoXGJpblxE
+        ZWJ1Z1xsaWJ2bGNcd2luLXg4NgkCAAAACw==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
