--- a/BNITapCash/Classes/Forms/LostTicket.resx
+++ b/BNITapCash/Classes/Forms/LostTicket.resx
@@ -117,4 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="liveCamera.VlcLibDirectory" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAEAQAAABdTeXN0ZW0uSU8uRGlyZWN0b3J5SW5mbwIAAAAMT3JpZ2luYWxQ
+        YXRoCEZ1bGxQYXRoAQEGAgAAADtFOlxLYW50b3JcQyNcQk5JVGFwQ2FzaFxCTklUYXBDYXNoXGJpblxE
+        ZWJ1Z1xsaWJ2bGNcd2luLXg4NgkCAAAACw==
+</value>
+  </data>
 </root>
